--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,6 @@
 }
 
 body {
-    background-color: #ffffff;
     color: white;
 }
 
@@ -41,6 +40,11 @@ body {
 /* HEADER */
 
 header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 20;
+    width: 100vw;
     height: 60px;
     background-color: #1B1426;
 }
@@ -72,15 +76,40 @@ header .header-bottom nav {
     position: fixed;
     top: 60px;
     left: 0;
-
     width: 80vw;
     height: calc(100vh - 60px);
 
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 20px;
 
     background-image: linear-gradient(to bottom right, rgba(27, 20, 38, 0.7), rgba(27, 20, 38, 0.3));
+    backdrop-filter: blur(45px);
 }
+
+/* somente links "filhos diretos" */
+header .header-bottom nav > a {
+    padding: 30px 0;
+    color: white;
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 15px;
+    text-align: center;
+    text-decoration: none;
+    border-bottom: 2px solid #F9AA01;
+}
+
+header .header-bottom nav > a:last-of-type {
+    border-bottom: none;
+}
+
+header .header-bottom nav .social-media {
+    display: flex;
+    justify-content: center;
+    gap: 50px; /* gap é o espaçamento entre os elementos, funciona em linha e também em coluna. */
+}
+
 
 header .header-bottom .user-menu {
     display: none;
