--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,11 @@
 }
 
 @font-face {
+    font-family: "titilliumweb-bold";
+    src: url(../assets/fonts/Titillium_Web/TitilliumWeb-Bold.ttf);
+}
+
+@font-face {
     font-family: "inter";
     src: url(../assets/fonts/Inter/Inter-VariableFont_slnt\,wght.ttf);
 }
@@ -146,10 +151,17 @@ main {
     margin-top: 60px;
 }
 
-/* Banner */
-.banner {
+/* banner */
+main .banner {
     width: 100%;
     height: 606px;
+    padding: 40px 0;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
     background-color: rebeccapurple;
     background-image: url(../assets/images/banner-image.png);
     background-size: contain;
@@ -157,13 +169,14 @@ main {
     background-position: bottom;
 }
 
-.banner h1 {
+main .banner h1 {
     font-family: "titilliumweb-black";
     font-size: 40px;
     text-shadow: 0 0 7px #FD4255;
+    
 }
 
-.banner .botao-sobre {
+main .banner .botao-sobre {
     width: 171px;
     height: 40px;
     display: flex;
@@ -172,7 +185,25 @@ main {
     background-color: #F9AA01;
     color: #1B1426;
     text-decoration: none;
-    font-family: "titilliumweb-black";
+    font-family: "titilliumweb-bold";
     font-size: 24px;
     border-radius: 8px;
+}
+
+/* cards */
+main .cards {
+    width: 100%;
+    height: 588px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    background-color: #1B1426;
+}
+
+main .cards img {
+    width: 336px;
+    height: 189px;
 }
