--- a/styles/style.css
+++ b/styles/style.css
@@ -56,7 +56,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 20;
+    z-index: 30;
     width: 100vw;
     height: 60px;
     background-color: #1B1426;
@@ -162,9 +162,8 @@ main .banner {
     justify-content: space-between;
     align-items: center;
 
-    background-color: rebeccapurple;
     background-image: url(../assets/images/banner-image.png);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
 }
@@ -190,8 +189,8 @@ main .banner .botao-sobre {
     border-radius: 8px;
 }
 
-/* cards */
-main .cards {
+/* games */
+main .games {
     width: 100%;
     height: 588px;
 
@@ -203,7 +202,88 @@ main .cards {
     background-color: #1B1426;
 }
 
-main .cards img {
-    width: 336px;
-    height: 189px;
+/* info */
+main .info {
+    width: 100%;
+    height: 1535px;
+    padding-top: 90px;
+    background-color: #F9AA01;
+}
+
+main .info .flex{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+main .info h2 {
+    font-family: "titilliumweb-black";
+    font-size: 18px;
+    color: #1B1426;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+main .info hr {
+    width: 253px;
+    border: 2px solid #1B1426;
+    margin-top: 14px;
+}
+
+main .info article.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    
+    width: 230px;
+    height: 300px;
+    padding: 25px;
+
+    border: 1px solid;
+    border-radius: 8px;
+
+    background: linear-gradient(146.47deg, rgba(122, 49, 236, 0.2) 1.36%, rgba(47, 7, 109, 0.83) 99.04%);
+    backdrop-filter: blur(7.5px);
+}
+
+main .info article .card-icon{
+    width: 100px;
+    height: 100px;
+}
+
+main .info article .card-title{
+    font-family: "titilliumweb-black";
+    font-size: 18px;
+    text-shadow: 0px 0px 3px #FFFFFF;
+}
+
+main .info article .card-text {
+    font-family: "quicksand";
+    font-size: 13px;
+    text-align: justify;
+}
+
+main .info .first-card-container {
+    margin-top: 200px;
+    align-self: flex-end;
+    position: relative;
+}
+
+main .info .second-card-container {
+    margin-top: 471px;
+    align-self: flex-start;
+    position: relative;
+}
+
+main .info .first-card-container > img {
+   position: absolute;
+   right: 26px;
+   bottom: -88px;
+}
+
+main .info .second-card-container > img {
+   position: absolute;
+   left: 26px;
+   bottom: -10px;
 }
