--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,8 @@
 /* FONTS */
+@font-face {
+    font-family: "titilliumweb-regular";
+    src: url(../assets/fonts/Titillium_Web/TitilliumWeb-Regular.ttf);
+}
 
 @font-face {
     font-family: "titilliumweb-black";
@@ -498,4 +502,122 @@ footer .social-media-footer {
     display: flex;
     justify-content: center;
     gap: 25px;
+}
+
+footer .footer-top {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 1530px;
+}
+
+footer .footer-top .footer-titles h3 {
+    font-family: "titilliumweb-black";
+    font-size: 30px;
+}
+
+footer .footer-top .footer-titles hr {
+    border: 2px solid #F9AA01;
+    width: 112px;
+}
+
+/* lista ul */
+footer .footer-top .ul-configs {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+}
+
+footer .footer-top .ul-configs li {
+    list-style-type: none;
+    width: 110px;
+    margin-bottom: 20px;
+}
+
+footer .footer-top .ul-configs a {
+    color: white;
+    text-decoration: none;
+    font-family: "titilliumweb-bold";
+    font-size: 16px;
+}
+
+footer .footer-top .ul-configs a:before {
+    content: "\2015";
+    margin-right: 10px;
+    color: #F9AA01;
+}
+
+footer .footer-top #contacts {
+    color: white;
+    font-family: "titilliumweb-bold";
+    font-size: 16px;
+}
+
+footer .footer-top #contacts p {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+}
+
+footer .footer-top #contacts p span {
+    color: #F9AA01;
+}
+
+footer #newsletter input,
+footer #newsletter button {
+    width: 100%;
+    height: 40px;
+    margin-top: 20px;
+    border-radius: 8px;
+}
+
+footer #newsletter input {
+    background-color: transparent;
+    background-image: linear-gradient(to right bottom, rgba(239, 239, 239, .6), rgba(239, 239, 239, .1));
+    backdrop-filter: blur(6px);
+    border: 1px solid white;
+    color: white;
+    padding: 5px 10px;
+    font-family: "titilliumweb-regular";
+    font-size: 16px;
+}
+
+footer #newsletter input::placeholder {
+    color: white;
+    font-family: "inter";
+    font-size: 14px;
+}
+
+footer #newsletter button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F9AA01;
+    font-family: "titilliumweb-bold";
+    font-size: 16px;
+}
+
+footer .footer-bottom {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 40px;
+}
+
+footer .footer-bottom button.return-top-button {
+    width: 40px;
+    height: 40px;
+    margin-top: 80px;
+    align-self: flex-end;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 8px;
+}
+
+footer .footer-bottom p {
+    font-family: "titilliumweb-regular";
+    font-size: 16px;
 }
