Cadastro de equipes pronto no mobile e desktop

--- a/styles/teams-desktop-style.css
+++ b/styles/teams-desktop-style.css
@@ -126,6 +126,22 @@
         background-color: transparent;
     }
 
+    /* MAIN */
+    main {
+        margin: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    main .team-sign-in-box {
+        width: 800px;
+    }
+
+    main table {
+        width: 800px;
+    }
+
      /* FOOTER */
      footer {
         position: relative;
