Cadstro de jogadores prontas no mobile e no desktop

--- a/styles/players-desktop-style.css
+++ b/styles/players-desktop-style.css
@@ -146,6 +146,10 @@
         width: 565px;
     }
 
+    main table {
+        width: 800px;
+    }
+
     /* FOOTER */
     footer {
         position: relative;
